# kermes

./: .gitignore  README.md  test-user.json
binder/: pyproject.toml
binder/binder/: __init__.py  __main__.py  binder.py
binder/tests/: test_binder.py
bookkeeper/: pyproject.toml
bookkeeper/tests/: test_bookkeeper.py
converter/: pyproject.toml
converter/converter/: __main__.py  converter.py
converter/tests/: test_converter.py
fetch-service/: README.md  __main__.py  pyproject.toml
fetch-service/fetch_service/: __init__.py  __main__.py  fetch_service.py
fetch-service/messages/: __init__.py  add_article_message.py  article_fetch_complete_message.py
fetch-service/models/: __init__.py  article.py  user.py
fetch-service/queues/: sqs_consumer.py  sqs_producer.py  supports_consumption.py
fetch-service/repositories/: __init__.py  article_repository.py  file_repository.py  user_repository.py
fetch-service/repositories/aws_adapters/: __init__.py  article_adapter.py  user_adapter.py
fetch-service/tests/: test_fetcher_service.py
fetch-service/tests/decorators/: test_retry.py
fetch-service/tests/models/: test_article.py  test_user.py
fetcher/: pyproject.toml
fetcher-service/: __main__.py  pyproject.toml
fetcher-service/decorators/: retry.py
fetcher-service/models/: user.py
fetcher-service/repositories/: user_repository.py
fetcher-service/repositories/aws_adapters/: user_adapter.py
fetcher-service/tests/: test_fetcher_service.py
fetcher-service/tests/decorators/: test_retry.py
fetcher/fetcher/: __main__.py  fetcher.py
fetcher/tests/: test_fetcher.py
housekeeper/: pyproject.toml
housekeeper/tests/: test_housekeeper.py
libs/kermes-infra/: pyproject.toml
libs/kermes-infra/kermes_infra/mail/: __init__.py  mail_service.py
libs/kermes-infra/kermes_infra/messages/: __init__.py  bind_ebook_message.py  clean_up_message.py  convert_ebook_message.py  deliver_ebook_message.py
libs/kermes-infra/kermes_infra/models/: __init__.py  article.py  ebook.py
libs/kermes-infra/kermes_infra/queues/: __init__.py  signal_handler.py  sqs_consumer.py  sqs_producer.py
libs/kermes-infra/kermes_infra/repositories/: __init__.py  article_repository.py  ebook_repository.py  file_repository.py  user_repository.py
libs/kermes-infra/kermes_infra/repositories/aws_adapters/: __init__.py  article_adapter.py  ebook_adapter.py  file_adapter.py  user_adapter.py
libs/kermes-infra/tests/: test_kermes_infra.py
libs/kermes-infra/tests/models/: test_article.py  test_ebook.py  test_user.py
postmaster/: pyproject.toml
postmaster/postmaster/: __main__.py  postmaster.py
postmaster/tests/: test_postmaster.py
provisioning/: infrastructure.tf
