[tool.poetry]
name = "fetcher-service"
version = "0.1.0"
description = ""
authors = ["Josh Tompkins <josh@joshtompkins.com>"]

[tool.poetry.dependencies]
python = "^3.8"
readability-lxml = "^0.8.1"
lxml = "^4.5.2"
requests = "^2.24.0"
boto3 = "^1.14.56"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.17.0"
flake8-pytest = "^1.3"
pytest-mock = "^3.3.1"
localstack = "^0.11.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
