[tool.poetry]
name = "postmaster"
version = "0.1.0"
description = ""
authors = ["Joshua Tompkins <josh@joshtompkins.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kermes-infra = {path = "../libs/kermes-infra"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.17.0"
flake8-pytest = "^1.3"
pytest-mock = "^3.3.1"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
